--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -99,4 +99,27 @@ jobs:
           docker tag ${GH_IMAGE_ID}:${IMAGE_VERSION} ${GH_IMAGE_ID}:latest
           docker push ${GH_IMAGE_ID}:latest
 
+      - name: create release
+        if: startsWith(github.ref, 'refs/tags/v')
+        run: |
+          set -x
+
+          ref_name='${{github.ref_name}}'
+          version="${ref_name:1}" # strip leading 'v'
+
+          # download github-release tool
+          github_rel_url="https://github.com/github-release/github-release/releases/download/v0.10.0/linux-amd64-github-release.bz2"
+          curl -L "${github_rel_url}" | bunzip2 > github-release
+          chmod a+rx ./github-release
+
+          export GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
+          IFS='/' read repo_user repo_name  <<<$(echo "${{github.repository}}")
+
+          ./github-release release \
+              --user $repo_user \
+              --repo $repo_name \
+              --tag ${{github.ref_name}} \
+              --name "Version $version" \
+              --description "See the changelog for a detailed list of changes" \
+              --draft
 
